@@ -1,4 +1,6 @@
 Changes in quota-tools from 3.14 to 3.15
+* implemented quota netlink daemon to listen to kernel netlink messages and send them
+  to DBUS and / or write them to the console (Jan Kara)
 * modified configure scripts and warnquota to check for new LDAP library and allow use of URI (Jan Kara)
 * fix LDAP scripts to set VISUAL instead of EDITOR (Michael Meskes)
 * added ext4 filesystem to the list of supported filesystems (Jan Kara)
